fix: remove  scrollbar in firefox and chrome

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -32,10 +32,12 @@ body {
   background: #a8dadc !important;
 }
 
-/* html::-webkit-scrollbar {
+/* Remove scrollbar in chrome */
+ html::-webkit-scrollbar {
   display: none;
 }
 
+/* Remove scrollbar in firefox */
 html {
   scrollbar-width: none;
-} */
+} 
